src/scripts/OSUIFramework/Pattern/Carousel/scss/_carousel.scss
/*! Patterns - Interaction - Carousel */
////
/// @group Patterns-Carousel
/// Patterns - Interaction - Carousel

/* Splide Library Core Default Styles */
@import '../../../../Providers/Carousel/Splide/scss/splide-core.scss';

/* OutSystems UI Carousel customization */
///
.osui-carousel {
	.splide__arrow {
		background-color: var(--color-neutral-0);
		box-shadow: var(--shadow-xs);
		height: 40px;
		opacity: 1;
		transition: opacity 150ms linear;
		width: 40px;
		will-change: opacity;

		&[disabled] {
			cursor: default;
			opacity: 0.3;
		}

		svg {
			height: 14px;
			width: 14px;

			path {
				fill: var(--color-neutral-7);
			}
		}
	}

	.splide__pagination {
		margin: 0;

		.splide__pagination__page {
			&.is-active {
				background-color: var(--color-primary);
			}
		}
	}

	.osui-carousel_content {
		& > .list {
			overflow: unset;

			// Service Studio Preview
			& {
				-servicestudio-display: inline-flex;
			}
		}
	}

	.splide--draggable,
	&.splide--draggable {
		cursor: grab;
	}

	.library-link {
		// Service Studio Preview
		& {
			-servicestudio-background-color: var(--color-neutral-3);
		}

		// Service Studio Preview
		&::before {
			-servicestudio-color: var(--color-neutral-7);
			-servicestudio-content: 'The Carousel uses an external library - Splide.js. For extended options or general documentation check the link below:';
			-servicestudio-display: block;
		}
	}
}

///
.has-accessible-features {
	.splide__slide {
		box-shadow: none;
	}
}

